log

Thu 14 Mar 2024 07:57:43 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
672ae03
Thu 14 Mar 2024 08:09:35 PM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|5
total_score: 20/70
9758f3f
Thu 14 Mar 2024 08:24:18 PM UTC: 
 exercises.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:62:42: error: invalid operands to binary * (have ‘int *’ and ‘long unsigned int’)
   62 |   int *nuevoarr = (int *) malloc(newSize * sizeof(int))
      |                                          ^
exercises.c:63:3: error: expected ‘,’ or ‘;’ before ‘if’
   63 |   if (nuevoarr == NULL) (EXIT_FAILURE);
      |   ^~
exercises.c:64:18: error: comparison between pointer and integer [-Werror]
   64 |   for (i = 0 ; i < newSize ; i++)
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
1c962bd
Thu 14 Mar 2024 08:24:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:62:42: error: invalid operands to binary * (have ‘int *’ and ‘long unsigned int’)
   62 |   int *nuevoarr = (int *) malloc(newSize * sizeof(int))
      |                                          ^
exercises.c:63:3: error: expected ‘,’ or ‘;’ before ‘if’
   63 |   if (nuevoarr == NULL) (EXIT_FAILURE);
      |   ^~
Compilation failed
22fc447
Thu 14 Mar 2024 08:25:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:62:42: error: invalid operands to binary * (have ‘int *’ and ‘long unsigned int’)
   62 |   int *nuevoarr = (int *) malloc(newSize * sizeof(int));
      |                                          ^
exercises.c:63:25: error: statement with no effect [-Werror=unused-value]
   63 |   if (nuevoarr == NULL) (EXIT_FAILURE);
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
3d4364b
Thu 14 Mar 2024 08:26:50 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:64:25: error: statement with no effect [-Werror=unused-value]
   64 |   if (nuevoarr == NULL) (EXIT_FAILURE);
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
350fcfd
Thu 14 Mar 2024 08:29:04 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:64:25: error: statement with no effect [-Werror=unused-value]
   64 |   if (nuevoarr == NULL) (EXIT_FAILURE);
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
08013de
Thu 14 Mar 2024 08:34:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
132570d
Thu 14 Mar 2024 08:38:09 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
741b639
Thu 14 Mar 2024 08:44:19 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:89:10: error: ‘result’ redeclared as different kind of symbol
   89 |     int* result = (int *) malloc (sizeof(int) * (size1 + size2));
      |          ^~~~~~
exercises.c:87:28: note: previous definition of ‘result’ with type ‘int *’
   87 |                        int result[])
      |                        ~~~~^~~~~~~~
Compilation failed
cc08b79
Thu 14 Mar 2024 08:57:52 PM UTC: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:1:
exercises.c:101:1: error: expected identifier or ‘(’ before ‘{’ token
  101 | {
      | ^
Compilation failed
b901652
Thu 14 Mar 2024 08:58:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:91:21: error: expected expression before ‘<’ token
   91 |     if(arr1[ctra1] =< arr2[ctra2]) {
      |                     ^
exercises.c: At top level:
exercises.c:101:1: error: expected identifier or ‘(’ before ‘{’ token
  101 | {
      | ^
Compilation failed
d664770
Thu 14 Mar 2024 08:58:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:101:1: error: expected identifier or ‘(’ before ‘{’ token
  101 | {
      | ^
Compilation failed
3037103
